# hedge-fund-xray

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.claude/agents/: anomaly-detector.md  cross-source-analyst.md  data-engineer.md  data-quality.md  dtcc-analyst.md  factor-analyst.md  fcm-analyst.md  form-pf-analyst.md  notebook-reviewer.md  pipeline-orchestrator.md  regulatory-expert.md  report-writer.md  scenario-analyst.md  statistician.md  swaps-analyst.md  visualizer.md
.claude/commands/: cross-source-analysis.md  full-pipeline.md  parse-dtcc.md  parse-fcm.md  parse-form-pf.md  parse-swaps.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
notebooks/: hedge_fund_analysis.ipynb
src/: __init__.py  pipeline.py
src/analysis/: advanced.py  cross_source.py  metrics.py
src/data/: fetch.py  parse_dtcc.py  parse_fcm.py  parse_form_pf.py  parse_swaps.py  prepare.py
src/visualization/: plots.py
tests/: conftest.py  test_fetch.py  test_metrics.py  test_prepare.py
