[project]
name = "hedge-fund-autopsy"
version = "1.0.0"
description = "Open-source intelligence reconstructing the U.S. hedge fund industry from 9 public regulatory data sources"
readme = "README.md"
license = {text = "CC-BY-SA-4.0"}
requires-python = ">=3.10"
authors = [
    {name = "Christopher Ortiz"},
]
keywords = [
    "hedge-funds",
    "financial-data",
    "sec-edgar",
    "cftc",
    "dtcc",
    "federal-reserve",
    "derivatives",
    "open-data",
    "regulatory-data",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "requests>=2.28",
    "fredapi>=0.5",
    "python-dotenv>=1.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "statsmodels>=0.14",
    "scipy>=1.10",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "jupyter>=1.0",
]

[project.urls]
Repository = "https://github.com/Promeos/hedge-fund-autopsy"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:xml.etree",
]
